# shiftly

./: .agents  .codex  .env.example  .pylintrc  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  run_tests.py
.ai/: AGENTS.md
.ai/.codex/: config.toml
alembic/: env.py
alembic/versions/: 0fcc52a27d72_create_account_user_company_roles.py  18b3ae4a4e1f_upgrade_company_role_relation.py  1dd364afc06c_create_account_roles.py  2c6a9cfac413_create_account_companies.py  3ab042394f8d_create_account_refresh_tokens.py  416d8be03c11_creates_workdays.py  c14203442612_create_account_user.py  d8cb9ab652d3_criacao_usercompanyrequests.py  f504067f3889_creates_workshifts.py
docs/: architecture.md
src/account/controllers/: auth_middleware.py
src/account/interfaces/: icompanies_repository.py  ijwt_repository.py  iroles_repository.py  iuser_company_roles_repository.py  iusers_repository.py
src/account/repositories/: jwt_repository.py  users_repository.py
src/account/usecases/: auth_service.py
src/app/: dependencies.py
src/app/controllers/: auth_config.py  auth_router.py  company_router.py  link_user_to_company_router.py  (+4 more)
src/domain/: errors.py
src/infra/: security.py
src/interfaces/: icompanies_repository.py  ijwt_repository.py  iroles_repository.py  itoken_service.py  iuser_company_requests_repository.py  iuser_company_roles_repository.py  iusers_repository.py  iworkdays_repository.py
src/usecases/: auth_service.py
tests/: conftest.py
tests/api/: test_auth_middleware.py  test_healthcheck.py  test_user_company_requests.py  test_users.py
(+119 files in other folders)
